All popup title set hint and text color set to different color unwanted data for father/mother/other fix range and selection set to all options by default

--- a/app/src/main/res/layout/activity_pop_up_personal_info.xml
+++ b/app/src/main/res/layout/activity_pop_up_personal_info.xml
@@ -12,7 +12,7 @@
 
         <TextView
 
-            android:id="@+id/religion_name"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_margin="10dp"
