--- a/app/src/main/res/layout/activity_pop_up_choice_selection_third_page.xml
+++ b/app/src/main/res/layout/activity_pop_up_choice_selection_third_page.xml
@@ -13,7 +13,7 @@
         >
         <TextView
 
-            android:id="@+id/religion_name"
+            android:id="@+id/title"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
