--- a/app/src/main/res/layout/activity_pop_up_family_info_first_page.xml
+++ b/app/src/main/res/layout/activity_pop_up_family_info_first_page.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
         <TextView
 
-            android:id="@+id/religion_name"
+            android:id="@+id/title"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
