--- a/app/src/main/res/layout/activity_popup_abroad_option_dialog.xml
+++ b/app/src/main/res/layout/activity_popup_abroad_option_dialog.xml
@@ -12,17 +12,17 @@
 
         <TextView
 
-            android:id="@+id/abroad_option_name_textview"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:descendantFocusability="blocksDescendants"
             android:gravity="center"
-            android:text=""
+            android:text="বিদেশে অবস্থানের ধরন"
             android:textColor="#626262"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
