--- a/app/src/main/res/layout/activity_registration_choice_selection_third_page.xml
+++ b/app/src/main/res/layout/activity_registration_choice_selection_third_page.xml
@@ -202,14 +202,14 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/lblFromName"/>
                 <ImageView
-                    android:id="@+id/down_arrow"
+                    android:id="@+id/down_arrow_religion"
                     android:layout_gravity="right"
                     android:layout_weight="1"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginRight="10dp"
                     android:src="@drawable/down_arrow"
-                    />
+                    android:visibility="gone"/>
 
             </LinearLayout>
 
