--- a/app/src/main/res/layout/brother.xml
+++ b/app/src/main/res/layout/brother.xml
@@ -1,55 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_marginTop="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:gravity="right"
-        android:id="@+id/reject"
-        android:layout_marginRight="10dp"
-        >
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/remove"
-            android:layout_marginRight="@dimen/small_margin"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
         <TextView
+            android:id="@+id/tv_bhai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="বাদ দিন"
-            android:layout_gravity="right"
-            android:layout_marginTop="10dp"
-            />
+            android:layout_alignParentTop="true"
+            android:layout_margin="10dp"
+            android:text="ভাই"
+            android:gravity="left"
+            android:textColor="@color/colorPrimary" />
+
+        <LinearLayout
+            android:id="@+id/reject"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="right"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="@dimen/small_margin"
+                android:src="@drawable/remove" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="বাদ দিন" />
+        </LinearLayout>
     </LinearLayout>
 
     <EditText
         android:id="@+id/name_brother"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="  নাম*"
-        android:textColor="@color/black"
-        android:textColorHint="@color/lblFromName"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/white"
+        android:hint="  নাম*"
+        android:padding="10dp"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
+        android:textColor="@color/black"
+        android:textColorHint="@color/lblFromName" />
 
     <LinearLayout
         android:id="@+id/age_brother"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="0dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="0dp"
         android:background="@color/white"
         android:orientation="horizontal"
-        android:weightSum="2">
+        android:weightSum="2"
+        android:imeOptions="actionNext">
 
         <TextView
             android:id="@+id/age_text_view_brother"
@@ -60,22 +78,21 @@
             android:layout_weight="1"
             android:gravity="left"
             android:hint="বয়স*"
-            android:textSize="18dp"
             android:textColor="@color/black"
-            android:textColorHint="@color/lblFromName"/>
+            android:textColorHint="@color/lblFromName"
+            android:textSize="18dp"
+            android:imeOptions="actionNext"/>
 
         <ImageView
             android:id="@+id/down_arrow_age_brother"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
-
 
 
     <LinearLayout
@@ -83,8 +100,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:weightSum="2">
@@ -98,19 +115,18 @@
             android:layout_weight="1"
             android:gravity="left"
             android:hint="পেশা*"
-            android:textSize="18dp"
             android:textColor="@color/black"
-            android:textColorHint="@color/lblFromName"/>
+            android:textColorHint="@color/lblFromName"
+            android:textSize="18dp" />
 
         <ImageView
             android:id="@+id/down_arrow_profession_father"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
 
@@ -120,33 +136,33 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:weightSum="2">
 
         <TextView
             android:id="@+id/profession_group_text_view_brother"
-            android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:hint="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:hint="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
             android:textColor="@color/black"
-            android:textColorHint="@color/lblFromName"/>
+            android:textColorHint="@color/lblFromName"
+            android:textSize="18dp" />
+
         <ImageView
             android:id="@+id/down_arrow_profession_group_brother"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
 
@@ -154,29 +170,30 @@
         android:id="@+id/designation_brother"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="পদবী"
-        android:textColor="@color/black"
-        android:textColorHint="@color/lblFromName"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:hint="পদবী"
+        android:padding="10dp"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:textColorHint="@color/lblFromName" />
+
     <EditText
         android:id="@+id/institution_brother"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="প্রতিষ্ঠান"
-        android:textColor="@color/black"
-        android:textColorHint="@color/lblFromName"
-        android:padding="10dp"
-        android:layout_marginLeft="15dp"
-        android:background="@color/white"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:singleLine="true"/>
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/white"
+        android:hint="প্রতিষ্ঠান"
+        android:padding="10dp"
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:textColorHint="@color/lblFromName" />
 
 
     <LinearLayout
@@ -184,86 +201,85 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:weightSum="2">
 
         <TextView
             android:id="@+id/marital_text_view_brother"
-            android:gravity="left"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:hint="বৈবাহিক অবস্থা"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:hint="বৈবাহিক অবস্থা"
             android:textColor="@color/black"
-            android:textColorHint="@color/lblFromName"/>
+            android:textColorHint="@color/lblFromName"
+            android:textSize="18dp" />
+
         <ImageView
             android:id="@+id/down_arrow_marital_brother"
-            android:layout_gravity="right"
-            android:layout_weight="1"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_gravity="right"
             android:layout_marginRight="10dp"
-            android:src="@drawable/down_arrow"
-            />
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="gone"
         android:id="@+id/spouse"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/tab_text_color"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:background="@color/tab_text_color" />
 
 
         <LinearLayout
+            android:id="@+id/reject_spouse"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:orientation="horizontal"
-            android:gravity="right"
-            android:id="@+id/reject_spouse"
             android:layout_marginRight="10dp"
-            >
+            android:gravity="right"
+            android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/remove"/>
+                android:src="@drawable/remove" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="বাদ দিন"
                 android:layout_gravity="right"
                 android:layout_marginTop="10dp"
-                />
+                android:text="বাদ দিন" />
         </LinearLayout>
 
         <EditText
             android:id="@+id/name_brother_spouse"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="  ভাইয়ের স্ত্রীর নাম*"
-            android:textColor="@color/black"
-            android:textColorHint="@color/lblFromName"
-            android:padding="10dp"
-            android:layout_marginLeft="15dp"
-            android:background="@color/white"
-            android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:singleLine="true"/>
-
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/white"
+            android:hint="  ভাইয়ের স্ত্রীর নাম*"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textColorHint="@color/lblFromName" />
 
 
         <LinearLayout
@@ -271,8 +287,8 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:background="@color/white"
             android:orientation="horizontal"
             android:weightSum="2">
@@ -286,19 +302,18 @@
                 android:layout_weight="1"
                 android:gravity="left"
                 android:hint="পেশা*"
-                android:textSize="18dp"
                 android:textColor="@color/black"
-                android:textColorHint="@color/lblFromName"/>
+                android:textColorHint="@color/lblFromName"
+                android:textSize="18dp" />
 
             <ImageView
                 android:id="@+id/down_arrow_profession_brother_spouse"
-                android:layout_gravity="right"
-                android:layout_weight="1"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_gravity="right"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/down_arrow"
-                />
+                android:layout_weight="1"
+                android:src="@drawable/down_arrow" />
 
         </LinearLayout>
 
@@ -308,33 +323,33 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:background="@color/white"
             android:orientation="horizontal"
             android:weightSum="2">
 
             <TextView
                 android:id="@+id/profession_group_text_view_brother_spouse"
-                android:gravity="left"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:hint="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
-                android:textSize="18dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_weight="1"
+                android:gravity="left"
+                android:hint="প্রফেশনাল গ্রুপ (ঐচ্ছিক)"
                 android:textColor="@color/black"
-                android:textColorHint="@color/lblFromName"/>
+                android:textColorHint="@color/lblFromName"
+                android:textSize="18dp" />
+
             <ImageView
                 android:id="@+id/down_arrow_profession_group_brother_spouse"
-                android:layout_gravity="right"
-                android:layout_weight="1"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_gravity="right"
                 android:layout_marginRight="10dp"
-                android:src="@drawable/down_arrow"
-                />
+                android:layout_weight="1"
+                android:src="@drawable/down_arrow" />
 
         </LinearLayout>
 
@@ -342,29 +357,30 @@
             android:id="@+id/designation_brother_spouse"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="পদবী"
-            android:textColor="@color/black"
-            android:textColorHint="@color/lblFromName"
-            android:padding="10dp"
-            android:layout_marginLeft="15dp"
-            android:background="@color/white"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:singleLine="true"/>
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            android:hint="পদবী"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textColorHint="@color/lblFromName" />
+
         <EditText
             android:id="@+id/institution_brother_spouse"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="প্রতিষ্ঠান"
-            android:textColor="@color/black"
-            android:textColorHint="@color/lblFromName"
-            android:padding="10dp"
-            android:layout_marginLeft="15dp"
-            android:background="@color/white"
-            android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            android:singleLine="true"/>
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/white"
+            android:hint="প্রতিষ্ঠান"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textColorHint="@color/lblFromName" />
 
     </LinearLayout>
 </LinearLayout>
