--- a/app/src/main/res/layout/activity_registration_choice_selection_third_page.xml
+++ b/app/src/main/res/layout/activity_registration_choice_selection_third_page.xml
@@ -131,42 +131,52 @@
                 android:text="পাত্রীর বৈবাহিক অবস্থা*"
                 android:textColor="@color/colorPrimary" />
 
-
             <LinearLayout
-                android:id="@+id/marital"
+                android:id="@+id/marital_status"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/white"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="0dp"
-                android:layout_marginRight="10dp"
-                android:background="@color/white"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:layout_marginRight="10dp"/>
 
 
-                <TextView
-                    android:id="@+id/marital_text_view"
-                    android:gravity="left"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:hint="বৈবাহিক অবস্থা"
-                    android:textSize="18dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="15dp"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/lblFromName"/>
-                <ImageView
-                    android:id="@+id/down_arrow_marital"
-                    android:layout_gravity="right"
-                    android:layout_weight="1"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginRight="10dp"
-                    android:src="@drawable/down_arrow"
-                    />
+            <!--<LinearLayout-->
+                <!--android:id="@+id/marital"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="50dp"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_marginTop="0dp"-->
+                <!--android:layout_marginRight="10dp"-->
+                <!--android:background="@color/white"-->
+                <!--android:orientation="horizontal"-->
+                <!--android:weightSum="2">-->
 
-            </LinearLayout>
+
+                <!--<TextView-->
+                    <!--android:id="@+id/marital_text_view"-->
+                    <!--android:gravity="left"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:hint="বৈবাহিক অবস্থা"-->
+                    <!--android:textSize="18dp"-->
+                    <!--android:layout_marginTop="10dp"-->
+                    <!--android:layout_marginLeft="15dp"-->
+                    <!--android:textColor="@color/black"-->
+                    <!--android:textColorHint="@color/lblFromName"/>-->
+                <!--<ImageView-->
+                    <!--android:id="@+id/down_arrow_marital"-->
+                    <!--android:layout_gravity="right"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:layout_width="50dp"-->
+                    <!--android:layout_height="50dp"-->
+                    <!--android:layout_marginRight="10dp"-->
+                    <!--android:src="@drawable/down_arrow"-->
+                    <!--/>-->
+
+            <!--</LinearLayout>-->
 
 
             <TextView
@@ -226,7 +236,7 @@
                 android:id="@+id/muslim_cast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:background="@color/white"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="0dp"
@@ -236,7 +246,7 @@
                 android:id="@+id/hindu_cast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:background="@color/white"
                 android:layout_margin="10dp"/>
 
@@ -244,7 +254,7 @@
                 android:id="@+id/christian_cast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:background="@color/white"
                 android:layout_margin="10dp"/>
 
@@ -400,7 +410,7 @@
                 android:id="@+id/next"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="পরবর্তী ধাপ"
+                android:text="সম্পূর্ণ করুন"
                 android:textSize="24sp"
                 android:background="@color/colorPrimary"
                 android:textColor="@color/white"
